deploy/snack.k8s.template.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
  labels:
    app: snack
spec:
  replicas: $REPLICAS
  selector:
    matchLabels:
      app: snack
  minReadySeconds: 10
  revisionHistoryLimit: 10
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 5
  template:
    metadata:
      labels:
        app: snack
    spec:
      restartPolicy: Always
      containers:
        - name: snack
          image: "gcr.io/exponentjs/snack:${TAG}"
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: http
          readinessProbe:
            httpGet:
              path: "/"
              port: 3011
            initialDelaySeconds: 1
          livenessProbe:
            httpGet:
              path: "/"
              port: 3011
            initialDelaySeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 200m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: snack
  labels:
    app: snack
spec:
  selector:
    app: snack
  ports:
  - name: http
    port: 80
    targetPort: 3011
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: snack
  labels:
    app: snack
    ssl: "true"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - ${INGRESS_HOSTNAME}
    secretName: snack-tls
  rules:
    - host: ${INGRESS_HOSTNAME}
      http:
        paths:
        - backend:
            serviceName: snack
            servicePort: 80
          path: /
